Replace deprecated URL class by URI